--- a/transform/dbt_project.yml
+++ b/transform/dbt_project.yml
@@ -23,4 +23,7 @@ clean-targets:
   - dbt_packages
   - logs
 models:
-  my_meltano_project: null
+  my_meltano_project:
+vars:
+  my_meltano_project:
+    schema: "{{ env_var('DBT_SOURCE_SCHEMA') }}"
