--- a/transform/models/github_models.yml
+++ b/transform/models/github_models.yml
@@ -4,4 +4,4 @@ models:
   - name: dim_repositories_snapshot
   - name: dim_date
   - name: dim_repositories_history
-  - name: fact_daily_issues
+  - name: fact_daily_stats
