--- a/analyze/datasets/issue_dashboard/github-table-issues-created-last-30-days.yml
+++ b/analyze/datasets/issue_dashboard/github-table-issues-created-last-30-days.yml
@@ -1,11 +1,9 @@
 version: datasets/v0.2
 source: Github
-title: Open Issues Created Last 30 Days
-questions: what are the open issues created in the last 30 days?
+title: Issues Created Last 30 Days
+questions: what are the issues created in the last 30 days?
 description: |-
-  Open issues created in the last 30 days.
-
-  We do not show closed issues in this table.
+  Issues created in the last 30 days.
 
   #dashboard
   #issue-dashboard
@@ -18,6 +16,7 @@ metadata: |-
         {"name": "title", "label": "Title", "description": "Title"},
         {"name": "user_login", "label": "Created By", "description": "Created By"},
         {"name": "repo", "label": "Repo", "description": "Repo"},
+        {"name": "state", "label": "Status", "description": "Status"},
         {"name": "url", "label": "URL", "description": "URL"},
         {"name": "assignees", "label": "Assignees", "description": "Assignees"}
       ]
@@ -30,6 +29,7 @@ query: |-
     , title "issues.title"
     , user__login "issues.user_login"
     , repo "issues.repo"
+    , state "issues.state"
     , url "issues.url"
     , assignees "issues.assignees"
   FROM issues
