--- a/analyze/datasets/pr_dashboard/github-table-prs-created-last-30-days.yml
+++ b/analyze/datasets/pr_dashboard/github-table-prs-created-last-30-days.yml
@@ -1,11 +1,9 @@
 version: datasets/v0.2
 source: Github
-title: Open PRs Created Last 30 Days
-questions: what are the open prs created in the last 30 days?
+title: PRs Created Last 30 Days
+questions: what are the prs created in the last 30 days?
 description: |-
-  Open PRs created in the last 30 days.
-
-  We do not show closed PRs in this table.
+  PRs created in the last 30 days.
 
   #dashboard
   #pr-dashboard
@@ -18,6 +16,7 @@ metadata: |-
         {"name": "title", "label": "Title", "description": "Title"},
         {"name": "user_login", "label": "Created By", "description": "Created By"},
         {"name": "repo", "label": "Repo", "description": "Repo"},
+        {"name": "state", "label": "Status", "description": "Status"},
         {"name": "url", "label": "URL", "description": "URL"},
         {"name": "assignees", "label": "Assignees", "description": "Assignees"}
       ]
@@ -30,9 +29,9 @@ query: |-
     , title "prs.title"
     , user__login "prs.user_login"
     , repo "prs.repo"
+    , state "prs.state"
     , url "prs.url"
     , assignees "prs.assignees"
   FROM issues as prs
   WHERE created_at::date >= current_date - INTERVAL '30 day'
   AND "type" = 'pull_request'
-  AND closed_at IS NULL
