--- a/analyze/datasets/github-prs-created-and-closed-last-30-days.yml
+++ b/analyze/datasets/github-prs-created-and-closed-last-30-days.yml
@@ -26,7 +26,10 @@ visualisation: |-
       "options": {
         "scales": {
           "y": {
-            "beginAtZero": true
+            "beginAtZero": true,
+            "ticks": {
+              "stepSize": 1
+            }
           }
         }
       }
