Added github tag to all datasets

--- a/analyze/datasets/github-export-all-open-issues.yml
+++ b/analyze/datasets/github-export-all-open-issues.yml
@@ -7,7 +7,7 @@ description: |-
 
   All currently open github issues for your synced repositories.
 
-  #export
+  #github-export
 metadata:
 visualisation:
 query: |-
