--- a/analyze/datasets/github-stars-per-day-matatika-ce-repo-last-30-days.yml
+++ b/analyze/datasets/github-stars-per-day-matatika-ce-repo-last-30-days.yml
@@ -5,6 +5,7 @@ questions: how many stars does the matatika ce repo and how has it changed over 
 description: |-
   Stars on the Matatika CE repo.
 
+  #github
   #stars
 metadata: |-
   {
