--- a/analyze/datasets/issue_dashboard/github-table-issues-created-last-30-days.yml
+++ b/analyze/datasets/issue_dashboard/github-table-issues-created-last-30-days.yml
@@ -5,6 +5,7 @@ questions: what are the issues created in the last 30 days?
 description: |-
   Issues created in the last 30 days.
 
+  #github
   #dashboard
   #issue-dashboard
 metadata: |-
