--- a/analyze/datasets/pr_dashboard/github-table-prs-closed-last-30-days.yml
+++ b/analyze/datasets/pr_dashboard/github-table-prs-closed-last-30-days.yml
@@ -5,6 +5,7 @@ questions: what were the prs closed in the last 30 days?
 description: |-
   PRs closed in the last 30 days.
 
+  #github
   #dashboard
   #pr-dashboard
 metadata: |-
