--- a/analyze/datasets/pr_dashboard/github-treemap-prs-closed-last-7-days.yml
+++ b/analyze/datasets/pr_dashboard/github-treemap-prs-closed-last-7-days.yml
@@ -4,7 +4,8 @@ title: PRs Closed Last 7 Days
 questions: what are the total number of PRs we closed in the last 7 days?
 description: |-
   Total number of PRs closed in the last 7 days.
-
+  
+  #github
   #dashboard
   #pr-dashboard
 metadata: |-
