--- a/analyze/datasets/pr_dashboard/github-treemap-prs-created-last-7-days.yml
+++ b/analyze/datasets/pr_dashboard/github-treemap-prs-created-last-7-days.yml
@@ -5,6 +5,7 @@ questions: what are the total number of PRs created in the last 7 days?
 description: |-
   Total number of PRs created in the last 7 days.
 
+  #github
   #dashboard
   #pr-dashboard
 metadata: |-
