--- a/analyze/datasets/github-export-all-open-prs.yml
+++ b/analyze/datasets/github-export-all-open-prs.yml
@@ -7,7 +7,8 @@ description: |-
 
   All currently open github PRs for your synced repositories.
 
-  #export
+  #github
+  #github-export
 metadata:
 visualisation:
 query: |-
