--- a/analyze/datasets/issue_dashboard/github-treemap-issues-created-last-7-days.yml
+++ b/analyze/datasets/issue_dashboard/github-treemap-issues-created-last-7-days.yml
@@ -10,7 +10,7 @@ description: |-
   #issue-dashboard
 metadata: |-
   {
-    "name": "fact_daily_stats",
+    "name": "github_fact_daily_stats",
     "related_table": {
         "columns": [
         ], 
@@ -27,7 +27,7 @@ visualisation: |-
   }
 query: |-
   SELECT
-    COALESCE(sum(created_issues), 0) "fact_daily_stats.issues"
-  FROM fact_daily_stats
+    COALESCE(sum(created_issues), 0) "github_fact_daily_stats.issues"
+  FROM github_fact_daily_stats
   WHERE date_day <= current_date
   AND date_day >= current_date - INTERVAL '6 day'
